--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,3 +14,4 @@ overrides:
   postcss@<8.4.31: '>=8.4.31'
   semver@>=6.0.0 <6.3.1: '>=6.3.1'
   trim@<0.0.3: '>=0.0.3'
+  '@eslint/plugin-kit@<0.3.4': '>=0.3.4'
